--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
-    <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
-    <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_music_library"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_music" />
 
+    <item
+        android:id="@+id/navigation_video_library"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="@string/title_video" />
+
+    <item
+        android:id="@+id/navigation_playlist"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/title_playlist" />
 </menu>
