--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,16 +3,20 @@
 
     <item
         android:id="@+id/navigation_music_library"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/ic_music"
+        android:orderInCategory="10"
         android:title="@string/title_music" />
+
 
     <item
         android:id="@+id/navigation_video_library"
-        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:icon="@drawable/ic_video"
+        android:orderInCategory="30"
         android:title="@string/title_video" />
 
     <item
         android:id="@+id/navigation_playlist"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_playlist"
+        android:orderInCategory="20"
         android:title="@string/title_playlist" />
 </menu>
