Add "all_videos_textview" and "all_videos_recyclerview" to fragment_video_library.xml

--- a/app/src/main/res/layout/fragment_video_library.xml
+++ b/app/src/main/res/layout/fragment_video_library.xml
@@ -4,19 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="28dp"
     tools:context=".ui.video_library.VideoLibraryFragment">
 
     <TextView
-        android:id="@+id/text_video_library"
+        android:id="@+id/all_videos_textview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:gravity="top"
+        android:text="All videos (445)"
+        android:textColor="#474646"
+        android:textSize="14sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/all_videos_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/all_videos_textview" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
