Make thumbnails scale to fill their containing ShapeableImageView
This makes thumbnails for vertical videos scale correctly and also allows the "roundedCornerImageView" style to appear visually on the screen

--- a/app/src/main/res/layout/item_video_library_grid.xml
+++ b/app/src/main/res/layout/item_video_library_grid.xml
@@ -10,6 +10,7 @@
         android:layout_width="140dp"
         android:layout_height="90dp"
         android:src="@drawable/ic_home_black_24dp"
+        android:scaleType="centerCrop"
         app:shapeAppearanceOverlay="@style/roundedCornerImageView" />
 
     <TextView
