--- a/app/src/main/res/layout/item_video_library_grid.xml
+++ b/app/src/main/res/layout/item_video_library_grid.xml
@@ -13,34 +13,58 @@
             android:id="@+id/video_thumbnail_shapeableimageview"
             android:layout_width="140dp"
             android:layout_height="90dp"
+            android:layout_centerInParent="true"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_home_black_24dp"
-            app:shapeAppearanceOverlay="@style/roundedCornerImageView"
-            android:layout_centerInParent="true"/>
+            app:shapeAppearanceOverlay="@style/roundedCornerImageView" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_music"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:contentDescription="A white play arrow icon"
+            android:src="@drawable/ic_music" />
     </RelativeLayout>
 
-
-    <TextView
-        android:id="@+id/video_name_textview"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="REACT.MP4"
-        android:textColor="#474646"
-        android:textSize="13sp"
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/video_duration_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="03:01"
-        android:textColor="#474646"
-        android:textSize="11sp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/video_name_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:text="VIDEO.MP4"
+                android:textColor="#474646"
+                android:textSize="13sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/video_duration_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="03:01"
+                android:textColor="#474646"
+                android:textSize="11sp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/video_options_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:contentDescription="A gray options icon"
+            android:src="@drawable/ic_notifications_black_24dp" />
+
+    </LinearLayout>
+
 </LinearLayout>
