--- a/app/src/main/res/layout/item_video_library_grid.xml
+++ b/app/src/main/res/layout/item_video_library_grid.xml
@@ -14,6 +14,9 @@
             android:layout_width="140dp"
             android:layout_height="90dp"
             android:layout_centerInParent="true"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_home_black_24dp"
             app:shapeAppearanceOverlay="@style/roundedCornerImageView" />
@@ -62,7 +65,10 @@
             android:id="@+id/video_options_imageview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:clickable="true"
             android:contentDescription="A gray options icon"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
             android:src="@drawable/ic_notifications_black_24dp" />
 
     </LinearLayout>
