--- a/app/src/main/res/layout/item_video_library_grid.xml
+++ b/app/src/main/res/layout/item_video_library_grid.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:padding="10dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -11,8 +12,8 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/video_thumbnail_shapeableimageview"
-            android:layout_width="140dp"
-            android:layout_height="90dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:layout_centerInParent="true"
             android:clickable="true"
             android:focusable="true"
