--- a/app/src/main/res/layout/playlist_create_bs_layout.xml
+++ b/app/src/main/res/layout/playlist_create_bs_layout.xml
@@ -27,6 +27,7 @@
         android:padding="12dp">
 
         <EditText
+            android:id="@+id/edt_playlistNameCreate"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
@@ -55,6 +56,7 @@
         </RadioGroup>
 
         <Button
+            android:id="@+id/btn_createPlaylist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
