--- a/app/src/main/res/layout/fragment_playlist_details.xml
+++ b/app/src/main/res/layout/fragment_playlist_details.xml
@@ -40,6 +40,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/img_for_test" />
     </androidx.cardview.widget.CardView>
+
     <TextView
         android:id="@+id/tv_playlistDetailsName"
         android:layout_width="wrap_content"
@@ -75,8 +76,11 @@
         android:id="@+id/btn_addMore"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:background="@drawable/ic_outline_add_circle_outline_24"
+
+        android:background="?attr/selectableItemBackground"
         android:backgroundTint="@color/white"
+        android:clickable="true"
+        android:src="@drawable/ic_outline_add_circle_outline_24"
 
         android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/view_background"
@@ -103,7 +107,11 @@
         android:layout_height="wrap_content"
 
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+
+        android:padding="8dp"
         app:layout_constraintStart_toStartOf="@id/view_background"
         app:layout_constraintTop_toBottomOf="@id/view_background"
         app:layout_constraintEnd_toStartOf="@id/layout_shuffleAll"
@@ -115,7 +123,6 @@
 
             android:src="@drawable/ic_round_play_circle_outline_24"
             android:backgroundTint="@color/black"
-
             android:layout_gravity="center"
             />
 
@@ -140,6 +147,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+
+        android:padding="8dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="@id/layout_playAll"
         app:layout_constraintBottom_toBottomOf="@id/layout_playAll"
