--- a/app/src/main/res/layout/fragment_playlist_details.xml
+++ b/app/src/main/res/layout/fragment_playlist_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="60dp"
     android:orientation="vertical"
-    tools:context=".ui.playlist.PlaylistDetailsFragment">
+    tools:context=".ui.playlist.playlist_details.PlaylistDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
