--- a/app/src/main/res/layout/item_playlist_details.xml
+++ b/app/src/main/res/layout/item_playlist_details.xml
@@ -22,8 +22,8 @@
         >
         <ImageView
             android:id="@+id/img_thumbnailPlaylistDetails"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:contentDescription="@string/image_for_thumbnail"
 
             android:src="@drawable/ic_launcher_background"
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/tv_playlistNamePlaylistDetails"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
 
         android:layout_marginStart="20dp"
@@ -41,8 +41,11 @@
         android:text="@string/app_name"
 
         android:textColor="@color/colorPlaylist_textColor"
-        android:textSize="22sp"
+        android:textSize="16sp"
         android:textStyle="bold"
+
+        android:ellipsize="end"
+        android:singleLine="true"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/cardView_thumbnailPlaylistDetails"
