--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -33,7 +33,7 @@
             app:srcCompat="@drawable/levellist_play_pause_button" />
 
         <ImageButton
-            android:id="@+id/music_skip_forward_btn"
+            android:id="@+id/music_skip_next_btn"
             style="@style/MusicControlBtn"
             android:layout_width="@dimen/music_small_control_btn_size"
             android:layout_height="wrap_content"
@@ -101,7 +101,7 @@
             app:unplayed_color="#66F4F4F4" />
 
         <TextView
-            android:id="@+id/music_current_time"
+            android:id="@+id/music_current_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -112,7 +112,7 @@
             app:layout_constraintTop_toBottomOf="@+id/music_seekbar" />
 
         <TextView
-            android:id="@+id/music_total_time"
+            android:id="@+id/music_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -132,7 +132,7 @@
             android:textColor="@color/white"
             android:textSize="28sp"
             app:layout_constraintBottom_toTopOf="@+id/music_seekbar"
-            app:layout_constraintStart_toStartOf="@+id/music_current_time" />
+            app:layout_constraintStart_toStartOf="@+id/music_current_position" />
 
         <TextView
             android:id="@+id/music_player_title"
@@ -155,7 +155,7 @@
             android:text="@string/default_artist_name"
             android:textColor="@color/white"
             android:textSize="19sp"
-            app:layout_constraintStart_toStartOf="@+id/music_current_time"
+            app:layout_constraintStart_toStartOf="@+id/music_current_position"
             app:layout_constraintTop_toBottomOf="@+id/music_title" />
 
         <ImageButton
@@ -168,7 +168,7 @@
             android:minWidth="48dp"
             android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/music_seekbar"
-            app:layout_constraintEnd_toEndOf="@+id/music_total_time"
+            app:layout_constraintEnd_toEndOf="@+id/music_duration"
             app:srcCompat="@drawable/ic_more_white_24dp"
             tools:ignore="TouchTargetSizeCheck" />
 
