--- a/app/src/main/res/drawable/levellist_repeat_btn.xml
+++ b/app/src/main/res/drawable/levellist_repeat_btn.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <level-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:drawable="@drawable/ic_repeat_translucent_24dp"
+        android:maxLevel="0" />
+    <item
         android:drawable="@drawable/ic_repeat_white_24dp"
         android:maxLevel="1" />
     <item
