--- a/app/src/main/res/layout/song_list.xml
+++ b/app/src/main/res/layout/song_list.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/sogname"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -35,7 +35,7 @@
 
     <TextView
         android:id="@+id/artistname"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
