--- a/app/src/main/res/layout/artist_list.xml
+++ b/app/src/main/res/layout/artist_list.xml
@@ -12,7 +12,7 @@
             android:id="@+id/artthum"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            android:background="#E9E9E9"
+            android:background="@color/blue2"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
