--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -8,12 +8,13 @@
     tools:context=".ui.music_player.MusicPlayerActivity">
 
     <ImageView
-        android:id="@+id/album_art"
+        android:id="@+id/music_art_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:contentDescription="@string/album_artwork"
+        android:contentDescription="@string/music_artwork_background"
         android:scaleType="centerCrop"
+        android:alpha="0.3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,12 +25,12 @@
         style="@style/MusicControlBtn"
         android:layout_width="@dimen/music_play_pause_btn_size"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="50dp"
         android:contentDescription="@string/play_pause_btn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/levellist_play_pause_button" />
+        app:srcCompat="@drawable/level_list_play_pause_button" />
 
     <ImageButton
         android:id="@+id/music_skip_next_btn"
@@ -67,7 +68,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
-        app:srcCompat="@drawable/levellist_repeat_btn"
+        app:srcCompat="@drawable/level_list_repeat_btn"
         tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
 
     <ImageButton
@@ -80,7 +81,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/music_play_pause_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/music_play_pause_btn"
-        app:srcCompat="@drawable/levellist_shuffle_btn"
+        app:srcCompat="@drawable/level_list_shuffle_btn"
         tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />
 
     <com.google.android.exoplayer2.ui.DefaultTimeBar
@@ -185,5 +186,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_arrow_down_white_24dp"
         tools:ignore="ImageContrastCheck,ImageContrastCheck,TouchTargetSizeCheck" />
+
+    <ImageView
+        android:id="@+id/music_art"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/music_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/music_player_title"
+        app:srcCompat="@drawable/ic_music_note_white_24dp"
+        android:contentDescription="@string/music_artwork" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
