Setup music player menu and code refactor

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,7 +16,7 @@
 
     <item
         android:id="@+id/navigation_playlist"
-        android:icon="@drawable/ic_playlist"
+        android:icon="@drawable/ic_playlist_blue_24dp"
         android:orderInCategory="20"
         android:title="@string/title_playlist" />
 </menu>
